<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="btn_txt">DISPLAY</string>
    <string name="hint_txt">Enter Something</string>
    <string name="textview_txt">Display what the user enters</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name = "rbmale">Male</string>
    <string name = "rbfemale">Female</string>
</resources>