<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:layout_marginEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btndisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="#01579B"
            android:text="@string/btn_txt"
            android:textColor="#F3ECEC">

        </androidx.appcompat.widget.AppCompatButton>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:hint="@string/hint_txt"
            >

        </com.google.android.material.textfield.TextInputEditText>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtViewDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_txt">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/toggleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textOff="@string/disabled"
        android:textOn="@string/enabled"
        android:text="ToggleButton">

    </androidx.appcompat.widget.AppCompatToggleButton>
</LinearLayout>